Added doc strings, made functions inside GameMap synchronized and updated SoundManager ect'
1. There was problems of multiple threads trying to access GameMap at the same time so I synchronized some of the functions using the grid
2. Fixed the sound system there was a chance of multiple musics trying to start at the same time making it so no one start.
Added a force restart function
3. Refactored the HealthBarPanel to be it's own class so it can be used for both entitiypopupmenu and player status panel
4. Refactored the inventory panel to be more extendable when adding future items to it (using a map)
5. Added doc strings to multiple functions and classes